--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,7 +11,8 @@
 }
 
 body {
-   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
+      Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    position: relative;
 }
 
@@ -28,7 +29,11 @@ code {
    --light-gray: #313131;
    --smooht-gray-cl: #f1f1f1;
    --google-button-cl: #4c8cf1;
+   --smooth-gry-cl: #ffffff65;
    --dark-blue-cl: #0a37c0;
+   --smooth-yellow-cl: #fcedd461;
+   --smooth-blue-cl: #d5f3fe65;
+   --smooth-pink-cl: #e5d5fe48;
    --spec-base-background: #0f0f0f;
    --spec-elevated-background: #212121;
    --spec-menu-background: #2f2f2f;
@@ -83,6 +88,11 @@ code {
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
    background: #555;
+}
+
+.sidePaddingOne {
+   width: 60%;
+   margin: auto;
 }
 
 .error_text {
