user can upload resume information and skills

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -95,6 +95,17 @@ code {
    margin: auto;
 }
 
+@media (max-width: 1600px) {
+   .sidePaddingOne {
+      width: 80%;
+      margin: auto;
+   }
+}
+
 .error_text {
    color: var(--button-cl) !important;
+}
+
+.css-1poimk-MuiPaper-root-MuiMenu-paper-MuiPaper-root-MuiPopover-paper {
+   max-height: calc(56% - 32px) !important;
 }
