admin add users in groups feature, working..

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -42,7 +42,7 @@ code {
    --spec-brand-background-solid: #212121;
    --spec-brand-background-primary: rgba(33, 33, 33, 0.445);
    --spec-brand-background-secondary: rgba(33, 33, 33, 0.95);
-   --spec-general-background-a: #181818;
+   --spec-general-background-a: #18181866;
    --spec-general-background-b: #0f0f0f;
    --spec-general-background-c: #030303;
    --spec-error-background: #f4f4f4;
