--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,7 +11,8 @@
 }
 
 body {
-   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu,
+      Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
    position: relative;
 }
 
@@ -29,7 +30,7 @@ code {
    --smooht-gray-cl: #f1f1f1;
    --google-button-cl: #4c8cf1;
    --smooth-gry-cl: #ffffff65;
-   --dark-blue-cl: #0a37c0;
+   --dark-blue-cl: #1b306f;
    --smooth-yellow-cl: #fcedd461;
    --smooth-blue-cl: #d5f3fe65;
    --smooth-pink-cl: #e5d5fe48;
@@ -103,6 +104,12 @@ code {
    .sidePaddingOne {
       width: 80%;
       margin: auto;
+   }
+}
+
+@media (max-width: 600px) {
+   .sidePaddingOne {
+      width: 100%;
    }
 }
 
